iptables-wip/20201112-iptables-legacy--working
# Generated by iptables-save v1.8.5 on Thu Nov 12 20:05:17 2020
*mangle
:PREROUTING ACCEPT [1108961:1646924378]
:INPUT ACCEPT [521473:781203055]
:FORWARD ACCEPT [587410:865682409]
:OUTPUT ACCEPT [369105:46152322]
:POSTROUTING ACCEPT [960728:912570098]
-A POSTROUTING -o mpqemubr0 -p udp -m udp --dport 68 -m comment --comment "generated for Multipass network mpqemubr0" -j CHECKSUM --checksum-fill
COMMIT
# Completed on Thu Nov 12 20:05:17 2020
# Generated by iptables-save v1.8.5 on Thu Nov 12 20:05:17 2020
*nat
:PREROUTING ACCEPT [11614:1255039]
:INPUT ACCEPT [11047:1182742]
:OUTPUT ACCEPT [7008:772614]
:POSTROUTING ACCEPT [6933:767274]
-A POSTROUTING -s 10.127.208.0/24 ! -d 10.127.208.0/24 -m comment --comment "generated for Multipass network mpqemubr0" -j MASQUERADE
-A POSTROUTING -s 10.127.208.0/24 ! -d 10.127.208.0/24 -p udp -m comment --comment "generated for Multipass network mpqemubr0" -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.127.208.0/24 ! -d 10.127.208.0/24 -p tcp -m comment --comment "generated for Multipass network mpqemubr0" -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.127.208.0/24 -d 255.255.255.255/32 -m comment --comment "generated for Multipass network mpqemubr0" -j RETURN
-A POSTROUTING -s 10.127.208.0/24 -d 224.0.0.0/24 -m comment --comment "generated for Multipass network mpqemubr0" -j RETURN
COMMIT
# Completed on Thu Nov 12 20:05:17 2020
# Generated by iptables-save v1.8.5 on Thu Nov 12 20:05:17 2020
*filter
:INPUT ACCEPT [4584:564355]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3311:795158]
-A INPUT -i mpqemubr0 -p tcp -m tcp --dport 5000 -m comment --comment "generated for Multipass network mpqemubr0" -j LOG --log-prefix "MPINPUT:" --log-level 7
-A INPUT -i mpqemubr0 -p tcp -m tcp --dport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A INPUT -i mpqemubr0 -p udp -m udp --dport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A INPUT -i mpqemubr0 -p udp -m udp --dport 67 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A INPUT -i mpqemubr0 -p tcp -m tcp --dport 5000 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 5000 -m comment --comment "generated for Multipass network mpqemubr0" -j LOG --log-prefix "MPFORW:" --log-level 7
-A FORWARD -i mpqemubr0 -o mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -s 10.127.208.0/24 -i mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -d 10.127.208.0/24 -o mpqemubr0 -m conntrack --ctstate NEW,RELATED,ESTABLISHED -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -i mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -o mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -o mpqemubr0 -p tcp -m tcp --sport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A OUTPUT -o mpqemubr0 -p udp -m udp --sport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A OUTPUT -o mpqemubr0 -p udp -m udp --sport 67 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
COMMIT
# Completed on Thu Nov 12 20:05:17 2020
