iptables-wip/2020111201-nuage-iptables-legacy
# Generated by iptables-save v1.8.5 on Thu Nov 12 17:13:23 2020
*mangle
:PREROUTING ACCEPT [1100030:1645940919]
:INPUT ACCEPT [512732:780267785]
:FORWARD ACCEPT [587301:865673846]
:OUTPUT ACCEPT [362430:44619215]
:POSTROUTING ACCEPT [953825:911006569]
-A POSTROUTING -o mpqemubr0 -p udp -m udp --dport 68 -m comment --comment "generated for Multipass network mpqemubr0" -j CHECKSUM --checksum-fill
COMMIT
# Completed on Thu Nov 12 17:13:23 2020
# Generated by iptables-save v1.8.5 on Thu Nov 12 17:13:23 2020
*nat
:PREROUTING ACCEPT [11069:1160460]
:INPUT ACCEPT [10606:1129249]
:OUTPUT ACCEPT [6852:753614]
:POSTROUTING ACCEPT [6771:747953]
-A POSTROUTING -s 10.127.208.0/24 ! -d 10.127.208.0/24 -m comment --comment "generated for Multipass network mpqemubr0" -j MASQUERADE
-A POSTROUTING -s 10.127.208.0/24 ! -d 10.127.208.0/24 -p udp -m comment --comment "generated for Multipass network mpqemubr0" -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.127.208.0/24 ! -d 10.127.208.0/24 -p tcp -m comment --comment "generated for Multipass network mpqemubr0" -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.127.208.0/24 -d 255.255.255.255/32 -m comment --comment "generated for Multipass network mpqemubr0" -j RETURN
-A POSTROUTING -s 10.127.208.0/24 -d 224.0.0.0/24 -m comment --comment "generated for Multipass network mpqemubr0" -j RETURN
COMMIT
# Completed on Thu Nov 12 17:13:23 2020
# Generated by iptables-save v1.8.5 on Thu Nov 12 17:13:23 2020
*filter
:INPUT ACCEPT [512243:780222330]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [361949:44560182]
-A INPUT -i mpqemubr0 -p tcp -m tcp --dport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A INPUT -i mpqemubr0 -p udp -m udp --dport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A INPUT -i mpqemubr0 -p udp -m udp --dport 67 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -i mpqemubr0 -o mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -s 10.127.208.0/24 -i mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -d 10.127.208.0/24 -o mpqemubr0 -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -i mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -o mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -o mpqemubr0 -p tcp -m tcp --sport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A OUTPUT -o mpqemubr0 -p udp -m udp --sport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A OUTPUT -o mpqemubr0 -p udp -m udp --sport 67 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
COMMIT
# Completed on Thu Nov 12 17:13:23 2020
