iptables-wip/2020111202-nuage-iptables-legacy
# Generated by iptables-save v1.8.5 on Thu Nov 12 18:08:43 2020
*mangle
:PREROUTING ACCEPT [1104564:1646374183]
:INPUT ACCEPT [517132:780657351]
:FORWARD ACCEPT [587354:865677918]
:OUTPUT ACCEPT [366002:45424588]
:POSTROUTING ACCEPT [957485:911823410]
-A POSTROUTING -o mpqemubr0 -p udp -m udp --dport 68 -m comment --comment "generated for Multipass network mpqemubr0" -j CHECKSUM --checksum-fill
COMMIT
# Completed on Thu Nov 12 18:08:43 2020
# Generated by iptables-save v1.8.5 on Thu Nov 12 18:08:43 2020
*nat
:PREROUTING ACCEPT [11298:1213483]
:INPUT ACCEPT [10739:1141714]
:OUTPUT ACCEPT [6919:761333]
:POSTROUTING ACCEPT [6841:755839]
-A POSTROUTING -s 10.127.208.0/24 ! -d 10.127.208.0/24 -m comment --comment "generated for Multipass network mpqemubr0" -j MASQUERADE
-A POSTROUTING -s 10.127.208.0/24 ! -d 10.127.208.0/24 -p udp -m comment --comment "generated for Multipass network mpqemubr0" -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.127.208.0/24 ! -d 10.127.208.0/24 -p tcp -m comment --comment "generated for Multipass network mpqemubr0" -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.127.208.0/24 -d 255.255.255.255/32 -m comment --comment "generated for Multipass network mpqemubr0" -j RETURN
-A POSTROUTING -s 10.127.208.0/24 -d 224.0.0.0/24 -m comment --comment "generated for Multipass network mpqemubr0" -j RETURN
COMMIT
# Completed on Thu Nov 12 18:08:43 2020
# Generated by iptables-save v1.8.5 on Thu Nov 12 18:08:43 2020
*filter
:INPUT ACCEPT [243:18651]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [208:67424]
-A INPUT -i mpqemubr0 -p tcp -m tcp --dport 5000 -m comment --comment "generated for Multipass network mpqemubr0" -j LOG --log-prefix "MPINPUT:" --log-level 7
-A INPUT -i mpqemubr0 -p tcp -m tcp --dport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A INPUT -i mpqemubr0 -p udp -m udp --dport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A INPUT -i mpqemubr0 -p udp -m udp --dport 67 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A INPUT -i mpqemubr0 -p tcp -m tcp --dport 5000 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 5000 -m comment --comment "generated for Multipass network mpqemubr0" -j LOG --log-prefix "MPFORW:" --log-level 7
-A FORWARD -i mpqemubr0 -o mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -s 10.127.208.0/24 -i mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -d 10.127.208.0/24 -o mpqemubr0 -m conntrack --ctstate NEW,RELATED,ESTABLISHED -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -i mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -o mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -o mpqemubr0 -p tcp -m tcp --sport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A OUTPUT -o mpqemubr0 -p udp -m udp --sport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A OUTPUT -o mpqemubr0 -p udp -m udp --sport 67 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
COMMIT
# Completed on Thu Nov 12 18:08:43 2020
