iptables-wip/rules-legacy.v4
# Generated by iptables-save v1.8.5 on Thu Nov 12 22:07:22 2020
*mangle
:PREROUTING ACCEPT [1129058:1667176421]
:INPUT ACCEPT [541526:801430347]
:FORWARD ACCEPT [587454:865707160]
:OUTPUT ACCEPT [385315:48809659]
:POSTROUTING ACCEPT [977096:915270859]
-A POSTROUTING -o mpqemubr0 -p udp -m udp --dport 68 -m comment --comment "generated for Multipass network mpqemubr0" -j CHECKSUM --checksum-fill
COMMIT
# Completed on Thu Nov 12 22:07:22 2020
# Generated by iptables-save v1.8.5 on Thu Nov 12 22:07:22 2020
*nat
:PREROUTING ACCEPT [12021:1308701]
:INPUT ACCEPT [11449:1236040]
:OUTPUT ACCEPT [7120:786928]
:POSTROUTING ACCEPT [7043:781442]
-A POSTROUTING -s 10.127.208.0/24 ! -d 10.127.208.0/24 -m comment --comment "generated for Multipass network mpqemubr0" -j MASQUERADE
-A POSTROUTING -s 10.127.208.0/24 ! -d 10.127.208.0/24 -p udp -m comment --comment "generated for Multipass network mpqemubr0" -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.127.208.0/24 ! -d 10.127.208.0/24 -p tcp -m comment --comment "generated for Multipass network mpqemubr0" -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.127.208.0/24 -d 255.255.255.255/32 -m comment --comment "generated for Multipass network mpqemubr0" -j RETURN
-A POSTROUTING -s 10.127.208.0/24 -d 224.0.0.0/24 -m comment --comment "generated for Multipass network mpqemubr0" -j RETURN
COMMIT
# Completed on Thu Nov 12 22:07:22 2020
# Generated by iptables-save v1.8.5 on Thu Nov 12 22:07:22 2020
*filter
:INPUT ACCEPT [24633:20791342]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [19517:3452014]
-A INPUT -i mpqemubr0 -p tcp -m tcp --dport 5000 -m comment --comment "generated for deduplifier-host" -j LOG --log-prefix "MPINPUT:" --log-level debug
-A INPUT -i mpqemubr0 -p tcp -m tcp --dport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A INPUT -i mpqemubr0 -p udp -m udp --dport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A INPUT -i mpqemubr0 -p udp -m udp --dport 67 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 5000 -m comment --comment "generated for deduplifier-host" -j LOG --log-prefix "MPFORW:" --log-level debug
-A FORWARD -i mpqemubr0 -o mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -s 10.127.208.0/24 -i mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -d 10.127.208.0/24 -o mpqemubr0 -m conntrack --ctstate NEW,RELATED,ESTABLISHED -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A FORWARD -i mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -o mpqemubr0 -m comment --comment "generated for Multipass network mpqemubr0" -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -o mpqemubr0 -p tcp -m tcp --sport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A OUTPUT -o mpqemubr0 -p udp -m udp --sport 53 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
-A OUTPUT -o mpqemubr0 -p udp -m udp --sport 67 -m comment --comment "generated for Multipass network mpqemubr0" -j ACCEPT
COMMIT
# Completed on Thu Nov 12 22:07:22 2020
