iptables-wip/rules.v4
# Generated by iptables-save v1.8.5 on Tue Nov 17 20:22:48 2020
*filter
:INPUT ACCEPT [3625:304324]
:FORWARD ACCEPT [7:883]
:OUTPUT ACCEPT [3286:430798]
:LIBVIRT_INP - [0:0]
:LIBVIRT_OUT - [0:0]
:LIBVIRT_FWO - [0:0]
:LIBVIRT_FWI - [0:0]
:LIBVIRT_FWX - [0:0]
-A INPUT -j LIBVIRT_INP
-A FORWARD -i enp0s25 -p tcp -m tcp --dport 5000 -m comment --comment "generated for deduplifier-host" -j ACCEPT
-A FORWARD -j LIBVIRT_FWX
-A FORWARD -j LIBVIRT_FWI
-A FORWARD -j LIBVIRT_FWO
-A OUTPUT -j LIBVIRT_OUT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 68 -j ACCEPT
-A LIBVIRT_FWO -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A LIBVIRT_FWO -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWI -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A LIBVIRT_FWI -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWX -i virbr0 -o virbr0 -j ACCEPT
COMMIT
# Completed on Tue Nov 17 20:22:48 2020
# Generated by iptables-save v1.8.5 on Tue Nov 17 20:22:48 2020
*nat
:PREROUTING ACCEPT [397:24208]
:INPUT ACCEPT [396:24132]
:POSTROUTING ACCEPT [373:19816]
:OUTPUT ACCEPT [371:19680]
:LIBVIRT_PRT - [0:0]
-A PREROUTING -i enp0s25 -p tcp -m tcp --dport 5000 -m comment --comment "generated for deduplifier-host" -j LOG --log-prefix "IPNAT:" --log-level 7
-A PREROUTING -i enp0s25 -p tcp -m tcp --dport 5000 -m comment --comment "generated for deduplifier-host" -j DNAT --to-destination 10.127.208.39:5000
-A POSTROUTING -j LIBVIRT_PRT
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
COMMIT
# Completed on Tue Nov 17 20:22:48 2020
# Generated by iptables-save v1.8.5 on Tue Nov 17 20:22:48 2020
*mangle
:PREROUTING ACCEPT [3637:305553]
:INPUT ACCEPT [3625:304324]
:FORWARD ACCEPT [12:1229]
:OUTPUT ACCEPT [3286:430798]
:POSTROUTING ACCEPT [3307:433596]
:LIBVIRT_PRT - [0:0]
-A POSTROUTING -j LIBVIRT_PRT
-A LIBVIRT_PRT -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Tue Nov 17 20:22:48 2020
